// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Register
    getUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3>
           Register : 
        </h3>,
        <form
          className="col s12"
          onSubmit={[Function]}
        >
          <div
            className="row"
          >
            <div
              className="input-field col s12"
            >
              <input
                className="validate"
                id="email"
                onChange={[Function]}
                required={true}
                type="email"
              />
              <label
                htmlFor="email"
              >
                Email
              </label>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="input-field col s12"
            >
              <label
                htmlFor="password"
              >
                Password
              </label>
              <input
                className="validate"
                id="password"
                onChange={[Function]}
                required={true}
                type="password"
              />
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="input-field col s12"
            >
              <label
                htmlFor="name"
              >
                Name
              </label>
              <input
                className="validate"
                id="name"
                onChange={[Function]}
                required={true}
                type="text"
              />
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="input-field col s12"
            >
              <label
                htmlFor="city"
              >
                City
              </label>
              <input
                className="validate"
                id="city"
                onChange={[Function]}
                required={true}
                type="text"
              />
            </div>
          </div>
          <button
            className="waves-effect waves-light btn"
          >
             Register 
          </button>
        </form>,
      ],
      "className": "container row",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": " Register : ",
        },
        "ref": null,
        "rendered": " Register : ",
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <input
                  className="validate"
                  id="email"
                  onChange={[Function]}
                  required={true}
                  type="email"
                />
                <label
                  htmlFor="email"
                >
                  Email
                </label>
              </div>
            </div>,
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  htmlFor="password"
                >
                  Password
                </label>
                <input
                  className="validate"
                  id="password"
                  onChange={[Function]}
                  required={true}
                  type="password"
                />
              </div>
            </div>,
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  htmlFor="name"
                >
                  Name
                </label>
                <input
                  className="validate"
                  id="name"
                  onChange={[Function]}
                  required={true}
                  type="text"
                />
              </div>
            </div>,
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  htmlFor="city"
                >
                  City
                </label>
                <input
                  className="validate"
                  id="city"
                  onChange={[Function]}
                  required={true}
                  type="text"
                />
              </div>
            </div>,
            <button
              className="waves-effect waves-light btn"
            >
               Register 
            </button>,
          ],
          "className": "col s12",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="input-field col s12"
              >
                <input
                  className="validate"
                  id="email"
                  onChange={[Function]}
                  required={true}
                  type="email"
                />
                <label
                  htmlFor="email"
                >
                  Email
                </label>
              </div>,
              "className": "row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="validate"
                    id="email"
                    onChange={[Function]}
                    required={true}
                    type="email"
                  />,
                  <label
                    htmlFor="email"
                  >
                    Email
                  </label>,
                ],
                "className": "input-field col s12",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "validate",
                    "id": "email",
                    "onChange": [Function],
                    "required": true,
                    "type": "email",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Email",
                    "htmlFor": "email",
                  },
                  "ref": null,
                  "rendered": "Email",
                  "type": "label",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="input-field col s12"
              >
                <label
                  htmlFor="password"
                >
                  Password
                </label>
                <input
                  className="validate"
                  id="password"
                  onChange={[Function]}
                  required={true}
                  type="password"
                />
              </div>,
              "className": "row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    htmlFor="password"
                  >
                    Password
                  </label>,
                  <input
                    className="validate"
                    id="password"
                    onChange={[Function]}
                    required={true}
                    type="password"
                  />,
                ],
                "className": "input-field col s12",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Password",
                    "htmlFor": "password",
                  },
                  "ref": null,
                  "rendered": "Password",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "validate",
                    "id": "password",
                    "onChange": [Function],
                    "required": true,
                    "type": "password",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="input-field col s12"
              >
                <label
                  htmlFor="name"
                >
                  Name
                </label>
                <input
                  className="validate"
                  id="name"
                  onChange={[Function]}
                  required={true}
                  type="text"
                />
              </div>,
              "className": "row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    htmlFor="name"
                  >
                    Name
                  </label>,
                  <input
                    className="validate"
                    id="name"
                    onChange={[Function]}
                    required={true}
                    type="text"
                  />,
                ],
                "className": "input-field col s12",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Name",
                    "htmlFor": "name",
                  },
                  "ref": null,
                  "rendered": "Name",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "validate",
                    "id": "name",
                    "onChange": [Function],
                    "required": true,
                    "type": "text",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="input-field col s12"
              >
                <label
                  htmlFor="city"
                >
                  City
                </label>
                <input
                  className="validate"
                  id="city"
                  onChange={[Function]}
                  required={true}
                  type="text"
                />
              </div>,
              "className": "row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    htmlFor="city"
                  >
                    City
                  </label>,
                  <input
                    className="validate"
                    id="city"
                    onChange={[Function]}
                    required={true}
                    type="text"
                  />,
                ],
                "className": "input-field col s12",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "City",
                    "htmlFor": "city",
                  },
                  "ref": null,
                  "rendered": "City",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "validate",
                    "id": "city",
                    "onChange": [Function],
                    "required": true,
                    "type": "text",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": " Register ",
              "className": "waves-effect waves-light btn",
            },
            "ref": null,
            "rendered": " Register ",
            "type": "button",
          },
        ],
        "type": "form",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3>
             Register : 
          </h3>,
          <form
            className="col s12"
            onSubmit={[Function]}
          >
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <input
                  className="validate"
                  id="email"
                  onChange={[Function]}
                  required={true}
                  type="email"
                />
                <label
                  htmlFor="email"
                >
                  Email
                </label>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  htmlFor="password"
                >
                  Password
                </label>
                <input
                  className="validate"
                  id="password"
                  onChange={[Function]}
                  required={true}
                  type="password"
                />
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  htmlFor="name"
                >
                  Name
                </label>
                <input
                  className="validate"
                  id="name"
                  onChange={[Function]}
                  required={true}
                  type="text"
                />
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  htmlFor="city"
                >
                  City
                </label>
                <input
                  className="validate"
                  id="city"
                  onChange={[Function]}
                  required={true}
                  type="text"
                />
              </div>
            </div>
            <button
              className="waves-effect waves-light btn"
            >
               Register 
            </button>
          </form>,
        ],
        "className": "container row",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": " Register : ",
          },
          "ref": null,
          "rendered": " Register : ",
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="row"
              >
                <div
                  className="input-field col s12"
                >
                  <input
                    className="validate"
                    id="email"
                    onChange={[Function]}
                    required={true}
                    type="email"
                  />
                  <label
                    htmlFor="email"
                  >
                    Email
                  </label>
                </div>
              </div>,
              <div
                className="row"
              >
                <div
                  className="input-field col s12"
                >
                  <label
                    htmlFor="password"
                  >
                    Password
                  </label>
                  <input
                    className="validate"
                    id="password"
                    onChange={[Function]}
                    required={true}
                    type="password"
                  />
                </div>
              </div>,
              <div
                className="row"
              >
                <div
                  className="input-field col s12"
                >
                  <label
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <input
                    className="validate"
                    id="name"
                    onChange={[Function]}
                    required={true}
                    type="text"
                  />
                </div>
              </div>,
              <div
                className="row"
              >
                <div
                  className="input-field col s12"
                >
                  <label
                    htmlFor="city"
                  >
                    City
                  </label>
                  <input
                    className="validate"
                    id="city"
                    onChange={[Function]}
                    required={true}
                    type="text"
                  />
                </div>
              </div>,
              <button
                className="waves-effect waves-light btn"
              >
                 Register 
              </button>,
            ],
            "className": "col s12",
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="input-field col s12"
                >
                  <input
                    className="validate"
                    id="email"
                    onChange={[Function]}
                    required={true}
                    type="email"
                  />
                  <label
                    htmlFor="email"
                  >
                    Email
                  </label>
                </div>,
                "className": "row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <input
                      className="validate"
                      id="email"
                      onChange={[Function]}
                      required={true}
                      type="email"
                    />,
                    <label
                      htmlFor="email"
                    >
                      Email
                    </label>,
                  ],
                  "className": "input-field col s12",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "validate",
                      "id": "email",
                      "onChange": [Function],
                      "required": true,
                      "type": "email",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Email",
                      "htmlFor": "email",
                    },
                    "ref": null,
                    "rendered": "Email",
                    "type": "label",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="input-field col s12"
                >
                  <label
                    htmlFor="password"
                  >
                    Password
                  </label>
                  <input
                    className="validate"
                    id="password"
                    onChange={[Function]}
                    required={true}
                    type="password"
                  />
                </div>,
                "className": "row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      htmlFor="password"
                    >
                      Password
                    </label>,
                    <input
                      className="validate"
                      id="password"
                      onChange={[Function]}
                      required={true}
                      type="password"
                    />,
                  ],
                  "className": "input-field col s12",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Password",
                      "htmlFor": "password",
                    },
                    "ref": null,
                    "rendered": "Password",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "validate",
                      "id": "password",
                      "onChange": [Function],
                      "required": true,
                      "type": "password",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="input-field col s12"
                >
                  <label
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <input
                    className="validate"
                    id="name"
                    onChange={[Function]}
                    required={true}
                    type="text"
                  />
                </div>,
                "className": "row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      htmlFor="name"
                    >
                      Name
                    </label>,
                    <input
                      className="validate"
                      id="name"
                      onChange={[Function]}
                      required={true}
                      type="text"
                    />,
                  ],
                  "className": "input-field col s12",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Name",
                      "htmlFor": "name",
                    },
                    "ref": null,
                    "rendered": "Name",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "validate",
                      "id": "name",
                      "onChange": [Function],
                      "required": true,
                      "type": "text",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="input-field col s12"
                >
                  <label
                    htmlFor="city"
                  >
                    City
                  </label>
                  <input
                    className="validate"
                    id="city"
                    onChange={[Function]}
                    required={true}
                    type="text"
                  />
                </div>,
                "className": "row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      htmlFor="city"
                    >
                      City
                    </label>,
                    <input
                      className="validate"
                      id="city"
                      onChange={[Function]}
                      required={true}
                      type="text"
                    />,
                  ],
                  "className": "input-field col s12",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "City",
                      "htmlFor": "city",
                    },
                    "ref": null,
                    "rendered": "City",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "validate",
                      "id": "city",
                      "onChange": [Function],
                      "required": true,
                      "type": "text",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": " Register ",
                "className": "waves-effect waves-light btn",
              },
              "ref": null,
              "rendered": " Register ",
              "type": "button",
            },
          ],
          "type": "form",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`snap 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Register
    getUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3>
           Register : 
        </h3>,
        <form
          className="col s12"
          onSubmit={[Function]}
        >
          <div
            className="row"
          >
            <div
              className="input-field col s12"
            >
              <input
                className="validate"
                id="email"
                onChange={[Function]}
                required={true}
                type="email"
              />
              <label
                htmlFor="email"
              >
                Email
              </label>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="input-field col s12"
            >
              <label
                htmlFor="password"
              >
                Password
              </label>
              <input
                className="validate"
                id="password"
                onChange={[Function]}
                required={true}
                type="password"
              />
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="input-field col s12"
            >
              <label
                htmlFor="name"
              >
                Name
              </label>
              <input
                className="validate"
                id="name"
                onChange={[Function]}
                required={true}
                type="text"
              />
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="input-field col s12"
            >
              <label
                htmlFor="city"
              >
                City
              </label>
              <input
                className="validate"
                id="city"
                onChange={[Function]}
                required={true}
                type="text"
              />
            </div>
          </div>
          <button
            className="waves-effect waves-light btn"
          >
             Register 
          </button>
        </form>,
      ],
      "className": "container row",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": " Register : ",
        },
        "ref": null,
        "rendered": " Register : ",
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <input
                  className="validate"
                  id="email"
                  onChange={[Function]}
                  required={true}
                  type="email"
                />
                <label
                  htmlFor="email"
                >
                  Email
                </label>
              </div>
            </div>,
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  htmlFor="password"
                >
                  Password
                </label>
                <input
                  className="validate"
                  id="password"
                  onChange={[Function]}
                  required={true}
                  type="password"
                />
              </div>
            </div>,
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  htmlFor="name"
                >
                  Name
                </label>
                <input
                  className="validate"
                  id="name"
                  onChange={[Function]}
                  required={true}
                  type="text"
                />
              </div>
            </div>,
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  htmlFor="city"
                >
                  City
                </label>
                <input
                  className="validate"
                  id="city"
                  onChange={[Function]}
                  required={true}
                  type="text"
                />
              </div>
            </div>,
            <button
              className="waves-effect waves-light btn"
            >
               Register 
            </button>,
          ],
          "className": "col s12",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="input-field col s12"
              >
                <input
                  className="validate"
                  id="email"
                  onChange={[Function]}
                  required={true}
                  type="email"
                />
                <label
                  htmlFor="email"
                >
                  Email
                </label>
              </div>,
              "className": "row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="validate"
                    id="email"
                    onChange={[Function]}
                    required={true}
                    type="email"
                  />,
                  <label
                    htmlFor="email"
                  >
                    Email
                  </label>,
                ],
                "className": "input-field col s12",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "validate",
                    "id": "email",
                    "onChange": [Function],
                    "required": true,
                    "type": "email",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Email",
                    "htmlFor": "email",
                  },
                  "ref": null,
                  "rendered": "Email",
                  "type": "label",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="input-field col s12"
              >
                <label
                  htmlFor="password"
                >
                  Password
                </label>
                <input
                  className="validate"
                  id="password"
                  onChange={[Function]}
                  required={true}
                  type="password"
                />
              </div>,
              "className": "row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    htmlFor="password"
                  >
                    Password
                  </label>,
                  <input
                    className="validate"
                    id="password"
                    onChange={[Function]}
                    required={true}
                    type="password"
                  />,
                ],
                "className": "input-field col s12",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Password",
                    "htmlFor": "password",
                  },
                  "ref": null,
                  "rendered": "Password",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "validate",
                    "id": "password",
                    "onChange": [Function],
                    "required": true,
                    "type": "password",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="input-field col s12"
              >
                <label
                  htmlFor="name"
                >
                  Name
                </label>
                <input
                  className="validate"
                  id="name"
                  onChange={[Function]}
                  required={true}
                  type="text"
                />
              </div>,
              "className": "row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    htmlFor="name"
                  >
                    Name
                  </label>,
                  <input
                    className="validate"
                    id="name"
                    onChange={[Function]}
                    required={true}
                    type="text"
                  />,
                ],
                "className": "input-field col s12",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Name",
                    "htmlFor": "name",
                  },
                  "ref": null,
                  "rendered": "Name",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "validate",
                    "id": "name",
                    "onChange": [Function],
                    "required": true,
                    "type": "text",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="input-field col s12"
              >
                <label
                  htmlFor="city"
                >
                  City
                </label>
                <input
                  className="validate"
                  id="city"
                  onChange={[Function]}
                  required={true}
                  type="text"
                />
              </div>,
              "className": "row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    htmlFor="city"
                  >
                    City
                  </label>,
                  <input
                    className="validate"
                    id="city"
                    onChange={[Function]}
                    required={true}
                    type="text"
                  />,
                ],
                "className": "input-field col s12",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "City",
                    "htmlFor": "city",
                  },
                  "ref": null,
                  "rendered": "City",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "validate",
                    "id": "city",
                    "onChange": [Function],
                    "required": true,
                    "type": "text",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": " Register ",
              "className": "waves-effect waves-light btn",
            },
            "ref": null,
            "rendered": " Register ",
            "type": "button",
          },
        ],
        "type": "form",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3>
             Register : 
          </h3>,
          <form
            className="col s12"
            onSubmit={[Function]}
          >
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <input
                  className="validate"
                  id="email"
                  onChange={[Function]}
                  required={true}
                  type="email"
                />
                <label
                  htmlFor="email"
                >
                  Email
                </label>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  htmlFor="password"
                >
                  Password
                </label>
                <input
                  className="validate"
                  id="password"
                  onChange={[Function]}
                  required={true}
                  type="password"
                />
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  htmlFor="name"
                >
                  Name
                </label>
                <input
                  className="validate"
                  id="name"
                  onChange={[Function]}
                  required={true}
                  type="text"
                />
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="input-field col s12"
              >
                <label
                  htmlFor="city"
                >
                  City
                </label>
                <input
                  className="validate"
                  id="city"
                  onChange={[Function]}
                  required={true}
                  type="text"
                />
              </div>
            </div>
            <button
              className="waves-effect waves-light btn"
            >
               Register 
            </button>
          </form>,
        ],
        "className": "container row",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": " Register : ",
          },
          "ref": null,
          "rendered": " Register : ",
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="row"
              >
                <div
                  className="input-field col s12"
                >
                  <input
                    className="validate"
                    id="email"
                    onChange={[Function]}
                    required={true}
                    type="email"
                  />
                  <label
                    htmlFor="email"
                  >
                    Email
                  </label>
                </div>
              </div>,
              <div
                className="row"
              >
                <div
                  className="input-field col s12"
                >
                  <label
                    htmlFor="password"
                  >
                    Password
                  </label>
                  <input
                    className="validate"
                    id="password"
                    onChange={[Function]}
                    required={true}
                    type="password"
                  />
                </div>
              </div>,
              <div
                className="row"
              >
                <div
                  className="input-field col s12"
                >
                  <label
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <input
                    className="validate"
                    id="name"
                    onChange={[Function]}
                    required={true}
                    type="text"
                  />
                </div>
              </div>,
              <div
                className="row"
              >
                <div
                  className="input-field col s12"
                >
                  <label
                    htmlFor="city"
                  >
                    City
                  </label>
                  <input
                    className="validate"
                    id="city"
                    onChange={[Function]}
                    required={true}
                    type="text"
                  />
                </div>
              </div>,
              <button
                className="waves-effect waves-light btn"
              >
                 Register 
              </button>,
            ],
            "className": "col s12",
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="input-field col s12"
                >
                  <input
                    className="validate"
                    id="email"
                    onChange={[Function]}
                    required={true}
                    type="email"
                  />
                  <label
                    htmlFor="email"
                  >
                    Email
                  </label>
                </div>,
                "className": "row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <input
                      className="validate"
                      id="email"
                      onChange={[Function]}
                      required={true}
                      type="email"
                    />,
                    <label
                      htmlFor="email"
                    >
                      Email
                    </label>,
                  ],
                  "className": "input-field col s12",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "validate",
                      "id": "email",
                      "onChange": [Function],
                      "required": true,
                      "type": "email",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Email",
                      "htmlFor": "email",
                    },
                    "ref": null,
                    "rendered": "Email",
                    "type": "label",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="input-field col s12"
                >
                  <label
                    htmlFor="password"
                  >
                    Password
                  </label>
                  <input
                    className="validate"
                    id="password"
                    onChange={[Function]}
                    required={true}
                    type="password"
                  />
                </div>,
                "className": "row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      htmlFor="password"
                    >
                      Password
                    </label>,
                    <input
                      className="validate"
                      id="password"
                      onChange={[Function]}
                      required={true}
                      type="password"
                    />,
                  ],
                  "className": "input-field col s12",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Password",
                      "htmlFor": "password",
                    },
                    "ref": null,
                    "rendered": "Password",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "validate",
                      "id": "password",
                      "onChange": [Function],
                      "required": true,
                      "type": "password",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="input-field col s12"
                >
                  <label
                    htmlFor="name"
                  >
                    Name
                  </label>
                  <input
                    className="validate"
                    id="name"
                    onChange={[Function]}
                    required={true}
                    type="text"
                  />
                </div>,
                "className": "row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      htmlFor="name"
                    >
                      Name
                    </label>,
                    <input
                      className="validate"
                      id="name"
                      onChange={[Function]}
                      required={true}
                      type="text"
                    />,
                  ],
                  "className": "input-field col s12",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Name",
                      "htmlFor": "name",
                    },
                    "ref": null,
                    "rendered": "Name",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "validate",
                      "id": "name",
                      "onChange": [Function],
                      "required": true,
                      "type": "text",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="input-field col s12"
                >
                  <label
                    htmlFor="city"
                  >
                    City
                  </label>
                  <input
                    className="validate"
                    id="city"
                    onChange={[Function]}
                    required={true}
                    type="text"
                  />
                </div>,
                "className": "row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      htmlFor="city"
                    >
                      City
                    </label>,
                    <input
                      className="validate"
                      id="city"
                      onChange={[Function]}
                      required={true}
                      type="text"
                    />,
                  ],
                  "className": "input-field col s12",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "City",
                      "htmlFor": "city",
                    },
                    "ref": null,
                    "rendered": "City",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "validate",
                      "id": "city",
                      "onChange": [Function],
                      "required": true,
                      "type": "text",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": " Register ",
                "className": "waves-effect waves-light btn",
              },
              "ref": null,
              "rendered": " Register ",
              "type": "button",
            },
          ],
          "type": "form",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`snapshot isAuth true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Register
    getUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "push": false,
      "to": "/",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "push": false,
        "to": "/",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
